[package]
name = "y-serve-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1.72"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.57"
wasm-bindgen = "=0.2.86"
wasm-bindgen-futures = "=0.4.36"

# Broken
worker = "=0.0.18"
worker-sys = "=0.0.10"

# Broken
# worker = "0.0.14"
# worker-sys = "=0.0.8"

# Works
# worker = "0.0.13"
# worker-sys = "=0.0.7"
